# visual-space

./: .eslintrc.cjs  .gitignore  .visual-space.code-workspace  README.md  docker-compose.yml
back/: Dockerfile  justfile  manage.py  pyproject.toml  reqs-prod.txt  reqs.txt  visual-space.code-workspace
back/api/: admin.py  models.py  serializers.py  urls.py  views.py
back/api/migrations/: 0001_Appeal_model_created.py  0002_MainPageContent_created.py  0003_alter_appeal_comment_alter_appeal_notes.py
back/visualspace/: asgi.py  settings.py  urls.py  wsgi.py
front/: Dockerfile  front.code-workspace  index.html  package.json  pnpm-lock.yaml  vite.config.js  well_done.blend
front/src/: App.vue  main.js  style.css  style.css.map  style.scss
front/src/assets/: .main.css  well_done.glb
front/src/components/: AdvantageOption.vue  ButtonAppeal.vue  ModalAppeal.vue  ServiceBusiness.vue  ServiceLanding.vue  ServiceOption.vue  TheFooter.vue  TheHeader.vue  TheHome.vue  TheModel.vue  TheStar.vue
front/src/components/icons/: ListPoint.vue
front/src/router/: index.js
front/src/stores/: modal.js
front/src/views/: HomeView.vue
